# citry

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  pyproject.toml
.claude/: settings.json
.claude/hooks/: check-em-dashes.py
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: py--citry--publish.yml  py--citry-core--publish.yml  py--tests.yml  repo--dependabot-relock.yml  repo--supported-versions.yml  repo--tests.yml  rust--tests.yml
benchmarks/: README.md  compare.py  plot.py  utils.py
crates/citry_core_py/: AGENTS.md
crates/citry_template_parser/: AGENTS.md  Cargo.toml
crates/citry_template_parser/docs/agent/: INDEX.md
crates/citry_template_parser/src/: ast.rs  compiler.rs  constants.rs  grammar.pest  lib.rs  parser.rs  parser_context.rs  render_plan.rs
crates/citry_template_parser/src/lang/: go.rs  js.rs  lang.rs  php.rs  python.rs  rust.rs
crates/citry_template_parser/src/utils/: pest.rs
crates/citry_template_parser/tests/: tag_compiler.rs  tag_compiler_dynamic.rs  tag_parser_boolean_attrs.rs  tag_parser_comments.rs  tag_parser_composition.rs  tag_parser_control_flow_for.rs  tag_parser_control_flow_if.rs  tag_parser_dynamic_attrs.rs  tag_parser_expressions.rs  tag_parser_fills.rs  tag_parser_html.rs  tag_parser_kwargs.rs  tag_parser_nested_templates.rs  tag_parser_raw.rs  tag_parser_spreads.rs  tag_parser_structure.rs  tag_parser_user_rules.rs
crates/citry_template_parser/tests/common/: mod.rs
crates/python_safe_eval/: AGENTS.md
docs/: codebase.md  template-syntax.md
scripts/: supported_versions.py
(+31 files in other folders)
