[package]
name = "citry_template_parser"
description = "Parse Citry's Vue-like templates into an AST and compile them to various languages"
version = "1.0.0"
edition = "2021"

[dependencies]
python_safe_eval = { path = "../python_safe_eval" }
ruff_python_ast = { workspace = true }
ruff_python_parser = { workspace = true }

pyo3 = { workspace = true }
quick-xml = { workspace = true }
pest = { workspace = true }
pest_derive = { workspace = true }
thiserror = { workspace = true }
regex = { workspace = true }
lazy_static = { workspace = true }
